# Soft1-Rust-Eksamensopgave

./: Cargo.toml  README.md  build.rs  dbdiagram.md  exam questions.md  project description.md
documentation/: database_create_script.sql  database_fill_script.sql  dbdiagram.md  project description.md
exam questions preparation/: question 1.md  question 2.md  question 3.md  question 4.md  question 5.md  question 6.md  question 7.md  question 8.md  question 9.md
exam questions preparation/oskar/: q1.md  q2.md  q3.md  q4.md  q5.md  q6.md  q7.md  q8.md  q9.md
mod/: README.md  database.db
src/: main.rs
src/backend/: appdata.rs  lap.rs  mod.rs  race.rs
src/database/: circuit.rs  config.rs  connection.rs  country.rs  driver.rs  mod.rs  race.rs  teams.rs
src/model/: circuit.rs  country.rs  driver.rs  driver_contract.rs  lap.rs  mod.rs  race_driver_result.rs  race_result.rs  season.rs  season_schedule.rs  team.rs
src/ui/: choose_team_screen.rs  driver_list_screen.rs  driver_screen.rs  leaderboard_screen.rs  loading_screen.rs  main_game_screen.rs  main_screen.rs  mod.rs  race_schedule_screen.rs  race_screen.rs  team_list_screen.rs  team_screen.rs
src/ui/component/: goto.rs  mod.rs  modal.rs  navbar.rs  table.rs  toast.rs
src/util/: appdata.rs  file.rs  image_loader.rs  mod.rs  time.rs
