[package]
name = "formula_one_manager"
version = "0.1.0"
edition = "2021"
authors = ["Oskar", "Peter", "Yusuf"]

[dependencies]
chrono = "0.4"
druid = "0.8.3"
image = "0.24"
once_cell = "1.21"
rand = "0.8.5"
rayon = "1.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }

[build-dependencies]
winresource = "0.1"
